# xgzh

./: .gitignore  .talismanrc  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.private.config.json
apps/api/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_init_core_schema.py  0002_add_chat_tables.py  0003_extend_ipo_documents.py  0004_ipo_documents_fts.py  0005_add_article_tables.py  0006_add_broker_tables.py  0007_add_vip_tables.py  0008_ipos_historical.py  0009_feedbacks.py  0010_invite_rewards.py  0011_user_deletions.py  0012_subscriptions.py  0013_knowledge_articles.py  0014_community.py  0015_ipos_price_range.py  0016_users_password_email.py  0017_users_is_admin.py  0018_brokers_open_account_url.py  0019_feedbacks_soft_delete_admin.py  0020_admin_audit_logs.py
apps/api/app/: main.py
apps/api/app/adapters/: aastocks_ipo_client.py  akshare_client.py  eastmoney_ipo_client.py  hkex_client.py  llm_client.py  pdf_loader.py
apps/api/app/adapters/sms/: __init__.py  aliyun.py  base.py  factory.py  mock.py
apps/api/app/adapters/wechat/: __init__.py  mp_login.py
apps/api/app/api/v1/: __init__.py  admin.py  admin_brokers.py  admin_community.py  me.py  (+20 more)
apps/api/app/cache/: __init__.py  decorators.py  redis_client.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/observability/: __init__.py  sentry.py
apps/api/app/scheduler/: __init__.py
apps/api/app/schemas/: admin_dashboard.py  admin_users.py  agent.py  article.py  auth.py  broker.py  chat.py  community.py  conversion.py  favorite.py  feedback.py  invite.py  ipo.py  knowledge.py  me.py  payment.py  pii_inventory.py  push.py  subscription.py  vip.py
apps/api/app/security/: __init__.py  admin.py  blacklist.py  deps.py  jwt.py
apps/api/app/services/: admin_audit_service.py  admin_dashboard_service.py  admin_user_service.py  agent_service.py  article_service.py  article_tldr_service.py  auth_service.py  broker_service.py  conversion_service.py  error_monitor.py  favorite_service.py  feature_flags.py  feedback_service.py  invite_service.py  ipo_ingest_service.py  ipo_service.py  knowledge_service.py  otp_service.py  pii_inventory_service.py  push_service.py  security_password.py  subscription_service.py  user_deletion_service.py  user_service.py  vip_service.py
apps/api/app/utils/: __init__.py  email.py  phone.py
apps/api/evals/: __init__.py  cli.py  judge.py  metrics.py  reporter.py  runner.py  schema.py
apps/api/evals/dataset/: sprint2_80q.jsonl
apps/api/evals/reports/: .gitkeep
apps/api/scripts/: __init__.py  backfill_historical_ipos.py  check_historical_coverage.py  dev_seed_user_age.py  dev_wechatpay_simulate_callback.py  import_knowledge.py  purge_synthetic_ipos.py  seed_brokers.py
apps/api/seeds/: brokers.json  historical_ipos_fixture.json
apps/api/tests/: conftest.py  test_aastocks_ipo_client.py  test_admin_rbac.py  test_admin_users.py  test_agent_citation.py  test_agent_graph.py  test_agent_quota.py  test_agent_sandbox.py  test_agent_system_prompt.py  test_article_ingest_base.py  test_article_tldr_service.py  test_auth_login.py  test_basic_info_tool.py  test_cache.py  test_caixin_client.py  test_chunker.py  test_cls_global_client.py  test_compliance.py  test_eastmoney_ipo_client.py  test_eastmoney_search_client.py  test_error_monitor.py  test_error_monitor_alert.py  test_evals_judge.py  test_evals_metrics.py  test_evals_runner.py  test_evals_schema.py  test_favorites.py  test_feature_flags.py  test_feedback_service.py  test_financial_tool.py  test_forbidden_patterns.py  test_health.py  test_hkex_client.py  test_hybrid_search.py  test_hybrid_search_tool.py  test_invite.py  test_ipo_detail.py  test_ipo_ingest.py  test_ipos_list.py  test_jwt.py  (+25 more)
apps/api/tests/e2e/: run_journey.sh  test_user_journey.md
apps/api/tests/fixtures/: aastocks_upcomingipo_sample.html  eastmoney_ipolist_sample.html
apps/api/tests/integration/: conftest.py  test_admin_api.py  test_admin_audit.py  test_admin_brokers.py  test_admin_community.py  test_admin_dashboard.py  test_admin_feedbacks.py  test_admin_knowledge.py  test_admin_pii.py  test_agent_persistence.py  test_article_api.py  test_article_dedup_e2e.py  test_article_ingest_e2e.py  test_article_sentiment_e2e.py  test_article_tables.py  test_article_tldr_api.py  test_backfill_historical.py  test_broker_api.py  test_broker_redirect.py  test_broker_tables.py  test_chat_diagnose.py  test_chat_diagnose_quota.py  test_chat_tables.py  test_community_e2e.py  test_document_chunks_schema.py  test_e2e_article_pipeline.py  test_e2e_chat_diagnose.py  test_e2e_historical_ai_pipeline.py  test_e2e_ipo_diagnose.py  test_e2e_payment_lifecycle.py  test_feature_flags_eval.py  test_feedback.py  test_historical_coverage.py  test_historical_pattern_e2e.py  test_historical_tool.py  test_invite_reward.py  test_ipo_historical_api.py  test_ipo_historical_columns.py  test_knowledge_e2e.py  test_payment_e2e.py  (+6 more)
(+240 files in other folders)
