[project]
name = "xgzh-api"
version = "0.1.0"
description = "XGZH (新股智汇) - FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "XGZH Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.3",
    "litellm>=1.51.0",
    "akshare>=1.15.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "orjson>=3.10.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pyjwt>=2.8.0",
    "apscheduler>=3.10.4,<4",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "db: 需要 Postgres 真实连接（通过 XGZH_TEST_DATABASE_URL 提供）；未设置时自动 skip",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
