[project]
name = "xgzh-api"
version = "0.1.0"
description = "XGZH (新股智汇) - FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "XGZH Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.3",
    "litellm>=1.51.0",
    "akshare>=1.15.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.12",
    "redis>=5.0.0",
    "tenacity>=9.0.0",
    "pandas>=2.2.0",
    "orjson>=3.10.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pyjwt>=2.8.0",
    "apscheduler>=3.10.4,<4",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
# QA-S2-002 baseline 清理后保留的项目惯例 ignore 集合 (其余规则零容忍, CI 守):
# - E501  : 行长度由 line-length=100 + black/ruff format 兜底, 显式开线超长就让它过
# - B008  : FastAPI 路由强约定 ``Depends(...)`` 必须在参数默认值里出现, 这是
#           FastAPI 官方文档惯例 (spec/09 §BE-S2-008 已定: 全项目所有路由统一保留
#           此风格, 不动)
# - N818  : 项目里的 ``RefreshTokenInvalid`` / ``RateLimitExceeded`` 等业务异常
#           走"行为名"而非"<X>Error"后缀; 这是 spec/06 异常体系定的命名约定
# - N812  : 让 ``from datetime import date as Date`` 与表字段名 ``date`` 区分,
#           项目里 schemas/ipo.py / favorite.py 都用此惯例
# - N814  : ``from decimal import Decimal as _D`` 是 favorite_service 里的局部缩写
#           惯例 (减少噪音字符宽度); 不影响可读性
ignore = ["E501", "B008", "N818", "N812", "N814"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "db: 需要 Postgres 真实连接（通过 XGZH_TEST_DATABASE_URL 提供）；未设置时自动 skip",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
